k8s/krakend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend-deployment
spec:
  selector:
    matchLabels:
      app: krakend
  replicas: 1
  template:
    metadata:
      labels:
        app: krakend
    spec:
      imagePullSecrets:
        - name: acr-credentials
      containers:
        - name: krakend
          image: krakend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          command: ["/usr/bin/krakend"]
          args: ["run", "-d", "-c", "/etc/krakend/krakend.json", "-p", "8080"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: krakend-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8080
      protocol: TCP
  selector:
    app: krakend
