k8s/timeline-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeline-service-deployment
  labels:
    app: timeline-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timeline-service
  template:
    metadata:
      labels:
        io.kompose.network/app-network: "true"
        app: timeline-service
    spec:
      imagePullSecrets:
        - name: acr-credentials
      containers:
        - image: timeline-service
          imagePullPolicy: Always
          name: timeline-service
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: timeline-service
  labels:
    app: timeline-service-k8s
spec:
  type: ClusterIP
  ports:
    - name: "timeline-service-port"
      port: 3003
      targetPort: 3003
  selector:
    app: timeline-service
