k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service-deployment
  labels:
    app: web-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-service
  template:
    metadata:
      labels:
        io.kompose.network/app-network: "true"
        app: web-service
    spec:
      imagePullSecrets:
        - name: acr-credentials
      containers:
        - image: spContaineRegistry.azurecr.io/web:56875613373f0b503efdee36a65e52920f329c15
          name: web-service
          ports:
            - containerPort: 3002
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 256Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web-service-k8s
spec:
  type: LoadBalancer
  ports:
    - name: "web-service-port"
      port: 3000
      targetPort: 3000
  selector:
    app: web-service
