k8s/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - rabbitmq.kwetter.xyz
      secretName: kwetter-rabbitmq-tls
  rules:
    - host: rabbitmq.kwetter.xyz
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
